--- a/src/views/_base.jade
+++ b/src/views/_base.jade
@@ -4,7 +4,7 @@ html
   head
     title CoffeeScript + power-aseert + Angular.jsのテスト
 
-    link(rel="styleSheets", href="styles/main.css")
+    link(rel="stylesheet", href="styles/main.css")
 
     body(ng-app="powerAssertApp",ng-controller="TryPowerAssertController")
       block body
